--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         border-radius: 50%
     }
 </style>
-<img class="Pic-border" src="https://pbs.twimg.com/media/BQl0El3CIAAMGvr.jpg" alt="Me"
+<img class="Pic-border" src="https://pbs.twimg.com/media/BQl0El3CIAAMGvr.jpg" alt="Me">
 
-
+ds
