--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <header class="Big-Bold">First GITHUB EXPERIENCE</header>
+<hr>
 <style>
     body {
-        background-color: gray
+        background-color: whitesmoke
     }
     .Big-Bold {
         font-size: 34;
         color: red;
-    }
-    .Medium-font {
-        font-size: 24
-        color: blue;
+        text-align: center;
     }
     .Pic-border {
         border-color: black
         border-width: 10px
         border-style: solid;
         border-radius: 50%
+        width: 500px
+    }
+    .Test-Text {
+        font-size 24;
+        color: Red;
+        text-align: center;
     }
 </style>
 <img class="Pic-border" src="https://pbs.twimg.com/media/BQl0El3CIAAMGvr.jpg" alt="Me">
+<hr>
+<h1 class="Test-Text"><strong>Here are some Boxes to Look at and hopefully interact with</strong></h1>
+<form action="/submit-dog-photo">
+<input type="text"placeholder="Type Something Cool">
+<button type="Submit">Click The Button</button>
+</form>
+<hr>
 
-ds
+
+
