--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<header class="Big-Bold">First GITHUB EXPERIENCE</header>
+<header class="Big-Bold">First GitHub Experience</header>
 <hr>
 <style>
     body {
@@ -24,10 +24,17 @@
 </style>
 <img class="Pic-border" src="https://pbs.twimg.com/media/BQl0El3CIAAMGvr.jpg" alt="Me">
 <hr>
-<h1 class="Test-Text"><strong>Here are some Boxes to Look at and hopefully interact with</strong></h1>
+<h1 class="Test-Text"><strong>Here are some boxes to look at and hopefully interact with.</strong></h1>
 <form action="/submit-dog-photo">
 <input type="text"placeholder="Type Something Cool">
 <button type="Submit">Click The Button</button>
+</form>
+<hr>
+<h2 class="Test-Text"></h2><strong>From the three options bellow pick your favorite.</strong></h2>
+<form action=/test-radio-button>
+<input type="radio"name="Option One"unchecked>
+<input type="radio"name="Option Two"unchecked>
+<input type="radio"name="Option Three"unchecked>
 </form>
 <hr>
 
