--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 <button type="Submit">Click The Button</button>
 </form>
 <hr>
-<h2 class="Test-Text"></h2><strong>From the three options bellow pick your favorite.</strong></h2>
+<h2 class="Test-Text"><strong>From the three options bellow pick your favorite.</strong></h2>
 <form action=/test-radio-button>
-<input type="radio"name="Option One"unchecked>
-<input type="radio"name="Option Two"unchecked>
-<input type="radio"name="Option Three"unchecked>
+<input type="radio" name="Option One"unchecked>
+<input type="radio" name="Option Two"unchecked>
+<input type="radio" name="Option Three"unchecked>
 </form>
 <hr>
 
